tests/ui/trimmed-paths/core-unicode.stderr
error[E0308]: mismatched types
  --> $DIR/core-unicode.rs:14:9
   |
LL |     let PhantomData::<(inner::unicode, u32)> = PhantomData::<(u32, inner::unicode)>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   ------------------------------------ this expression has type `PhantomData<(u32, unicode)>`
   |         |
   |         expected `PhantomData<(u32, unicode)>`, found `PhantomData<(unicode, u32)>`
   |
   = note: expected struct `PhantomData<(u32, unicode)>`
              found struct `PhantomData<(unicode, u32)>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
